Update CV and reorder sections

--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
 		<div class="mainbody2" id="experience">
 			<f1><b>Work Experience</b></f1><br><br>
 			<div class="mainbody-indent">
+				<f3>Quantitative Developer</f3><br>
+				<f3>Squarepoint Capital, Commodities</f3><br>
+				<div class="justifybox"><b>May 2024 - Present<div class="nav">Singapore</b></div></div>
+				<br><br>
+
 				<f3>Senior Software Developer</f3><br>
-				<f3>GIC, Technology Group, Risk & Performance Solutions (RPMD)</f3><br>
-				<div class="justifybox"><b>Jul 2022 - Present<div class="nav">Singapore</b></div></div>
+				<f3>GIC, Technology Group, Business Partner and Solutions, Total Portfolio</f3><br>
+				<div class="justifybox"><b>Jul 2022 - May 2024<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Enhance departments’ capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
-						<li>Drive project progress by orchestrating coordination between developers and end users, gathering requirements from end users and scoping the work, ensuring timely delivery ahead of milestones</li>
-						<li>Ideate and develop open-source Python package for working with tree data structures, with over 80 GitHub stars to date</li>
+						<li>Enhanced departments’ capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
+						<li>Drove project progress by orchestrating coordination between developers and end users, gathering requirements from end users and scoping the work, ensuring timely delivery ahead of milestones</li>
+						<li>Ideated and developed open-source Python package for working with tree data structures, with over 100 GitHub stars to date</li>
 					</ul>
 				</div>
 				<br><br>
@@ -103,18 +108,41 @@
 				</div>
 				<br><br>
 
-		                <f3>Instructor</f3><br>
-				<f3>Heicoders Academy</f3><br>
-				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
+				<f3>Management Intern</f3><br>
+				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
+				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<ul>
-						<li>Responsible for instructing AI200 Applied Machine Learning course</li>
+						<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
+						<li>Attended professional training courses in assurance reporting and SAP modules</li>
+						<li>Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks</li>
+					</ul>
+					<ul class="award" style="margin-top: 0;">
+						<li>Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion</li>
 					</ul>
 				</div>
 				<br><br>
-		
-		                <f3>Teaching Assistant</f3><br>
-		                <f3>General Assembly</f3><br>
+
+				<f3>Campus Ambassador</f3><br>
+				<f3>Deutsche Bank</f3><br>
+				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<ul>
+						<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
+						<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
+					</ul>
+				</div>
+				<br><br>
+
+			</div>
+		</div>
+		<br><br>
+
+		<div class="mainbody2" id="other experience">
+			<f1><b>Teaching and Writing Experience</b></f1><br><br>
+			<div class="mainbody-indent">
+		        <f3>Instructor Assistant</f3><br>
+		        <f3>General Assembly</f3><br>
 				<div class="justifybox"><b>Dec 2023 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<ul>
@@ -123,12 +151,22 @@
 				</div>
 				<br><br>
 
+		        <f3>Instructor</f3><br>
+				<f3>Heicoders Academy</f3><br>
+				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<ul>
+						<li>Responsible for instructing AI200 Applied Machine Learning course</li>
+					</ul>
+				</div>
+				<br><br>
+
 				<f3>Content Writer</f3><br>
-				<f3>Medium</f3><br>
+				<f3>Various Publishers</f3><br>
 				<div class="justifybox"><b>Jan 2022 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<b>Write about all things programming!</b><br>
-					<a href="https://kayjanwong.medium.com/" target="_blank">Click here to visit my profile</a><br>
+					Click to visit my <a href="https://kayjanwong.medium.com/" target="_blank">Medium</a>, <a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">365 Data Science</a>, and <a href="https://builtin.com/authors/kay-jan-wong/" target="_blank">Built In</a> profile<br>
 					<ul>
 						<li>Most read story has over 100K views</li>
 						<li>Published on Towards Data Science, Python in Plain English</li>
@@ -148,47 +186,12 @@
 				</div>
 				<br><br>
 
-				<f3>Writer</f3><br>
-				<f3>365 Data Science</f3><br>
-				<div class="justifybox"><b>Jun 2022 - Jul 2022<div class="nav">Singapore</b></div></div>
-				<div class="paragraph small-paragraph">
-					<b>Write about all things programming!</b><br>
-					<a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">Click here to visit my profile</a><br>
-				</div>
-				<br><br>
-
-				<f3>Management Intern</f3><br>
-				<f3>KPMG, Advisory, IT Assurance and Security (ITAS)</f3><br>
-				<div class="justifybox"><b>May 2017 - Jul 2017<div class="nav">Singapore</b></div></div>
-				<div class="paragraph small-paragraph">
-					<ul>
-						<li>Review of IT processes and controls over logical and physical access, password management, user account management, audit logging, program change management, system development lifecycle, computer operations etc., governing data integrity, confidentiality and availability</li>
-						<li>Attended professional training courses in assurance reporting and SAP modules</li>
-						<li>Exposed to banking risk management, custody, data analytics, global financial services, prime brokerage, private equity, securitization, treasury and various frameworks</li>
-					</ul>
-					<ul class="award" style="margin-top: 0;">
-						<li>Represented Topaz (Team Advisory) in KPMG Sports Carnival 2017, clinching first place in Cheerleading and second place in Touch Rugby, assisting Topaz to secure Overall Champion</li>
-					</ul>
-				</div>
-				<br><br>
-
 				<f3><b>Music Teacher</b></f3><br>
 				<f3>Cristofori</f3><br>
 				<div class="justifybox"><b>Dec 2017 - Jul 2018<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<ul>
 						<li>Conduct electronic keyboard lessons for under-privileged children at Providence Care Centre</li>
-					</ul>
-				</div>
-				<br><br>
-
-				<f3>Campus Ambassador</f3><br>
-				<f3>Deutsche Bank</f3><br>
-				<div class="justifybox"><b>Aug 2016 - Aug 2017<div class="nav">Singapore</b></div></div>
-				<div class="paragraph small-paragraph">
-					<ul>
-						<li>Assist in building networks within campus and with the employer brand and recruitment team at Deutsche Bank</li>
-						<li>Influence and shape Deutsche Bank's on-campus marketing activities and recruitment strategies</li>
 					</ul>
 				</div>
 				<br><br>
@@ -212,6 +215,7 @@
 					</ul>
 				</div>
 				<br><br>
+
 			</div>
 		</div>
 		<br><br>
@@ -224,7 +228,7 @@
 				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
-				Airflow, Kedro, MLflow, Docker, Jenkins, OpenShift
+				Airflow, Kedro, MLflow, Docker, Jenkins, Kubernetes, OpenShift
 				<br><br>
 				<f3>Data Visualization, Optimization and Simulation Tools</f3><br>
 				AMPL, ExtendSim, Tableau, QGIS, DecisionVis, Disco (Fluxicon), Knime
