--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<body>
 		<div class="banner">
 			<div class="banner-name">
-				<f1>Kay Jan</f1>&nbsp;<f1 style="color: #fff; font-size:200%;">Wong</f1><br>
-				<f2>Software Developer, Data Scientist</f2>
+				<f1>Kay Jan</f1>&nbsp;<f1 style="color: #fff; font-size: 200%;">Wong</f1><br>
+				<f2>Quantitative Developer, Software Developer, Data Scientist</f2>
 			</div>
 			<div style="text-align:right;">
 				<span class="banner-link">
