--- a/index.html
+++ b/index.html
@@ -141,17 +141,7 @@
 		<div class="mainbody2" id="other experience">
 			<f1><b>Teaching and Writing Experience</b></f1><br><br>
 			<div class="mainbody-indent">
-		        <f3>Instructor Assistant</f3><br>
-		        <f3>General Assembly</f3><br>
-				<div class="justifybox"><b>Dec 2023 - Present<div class="nav">Singapore</b></div></div>
-				<div class="paragraph small-paragraph">
-					<ul>
-						<li>Responsible for grading assignments for Software Engineering Immersive Flex (SEIF) course</li>
-					</ul>
-				</div>
-				<br><br>
-
-		        <f3>Instructor</f3><br>
+				<f3>Instructor</f3><br>
 				<f3>Heicoders Academy</f3><br>
 				<div class="justifybox"><b>Jun 2022 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
@@ -174,6 +164,16 @@
 				</div>
 				<br><br>
 
+				<f3>Instructor Assistant</f3><br>
+				<f3>General Assembly</f3><br>
+				<div class="justifybox"><b>Dec 2023 - Jun 2024<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<ul>
+						<li>Responsible for grading assignments for Software Engineering Immersive Flex (SEIF) course</li>
+					</ul>
+				</div>
+				<br><br>
+		
 				<f3>Assistant Lecturer</f3><br>
 				<f3>National University of Singapore (NUS), School of Computing</f3><br>
 				<div class="justifybox"><b>Jan 2021 - Oct 2023<div class="nav">Singapore</b></div></div>
