--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 		<div class="mainbody2" id="skills">
 			<f1><b>Technical Skills</b></f1><br><br>
 			<div class="mainbody-indent">
-				<f3>Programming Languages/Tools</f3><br>
-				Python (FastAPI, sklearn), Pyspark, SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), Java, Scala, R, Go, NoSQL (MongoDB, Neo4j)<br>
-				Cassandra, Kafka, Redis, VBA, HTML, CSS, JS
+				<f3>Programming/Scripting Languages</f3><br>
+				Python (FastAPI, sklearn), Pyspark, SQL (SQLite, PostgreSQL, MSSQL, Oracle, Snowflake), KDB+/Q, Java, R<br>
+				Scala, Go, NoSQL (MongoDB, Neo4j, Redis), VBA
 				<br><br>
 				<f3>Data Science Workflow and Deployment Tools</f3><br>
 				Airflow, Kedro, MLflow, Docker, Jenkins, Kubernetes, OpenShift
@@ -237,7 +237,7 @@
 				Jira, Git, Bitbucket, Confluence
 				<br><br>
 				<f3>Web Development</f3><br>
-				Flask, Dash
+				Dash, Flask, HTML, CSS, JS
 				<br><br>
 				<f3>Microsoft Office</f3><br>
 				Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
