--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
 				<f3>Quantitative Developer</f3><br>
 				<f3>Squarepoint Capital, Commodities</f3><br>
 				<div class="justifybox"><b>May 2024 - Present<div class="nav">Singapore</b></div></div>
+				<div class="paragraph small-paragraph">
+					<br><b>Technical Desk-Align</b><br>
+					<ul>
+						<li>Designed and maintained in-house Python packages, automated jobs, and API endpoints, collaborating effectively with a global team of over 15 members</li>
+					</ul>
+				</div>
 				<br><br>
 
 				<f3>Senior Software Developer</f3><br>
@@ -38,8 +44,10 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Enterprise Risk</b><br>
 					<ul>
-						<li>Enhanced departments’ capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
+						<li>Enhanced departments' capability of computing risk, performance, and exposure metrics for top-of-the-house reporting by developing in-house Python packages, computation engines, and backend APIs</li>
 						<li>Drove project progress by orchestrating coordination between developers and end users, gathering requirements from end users and scoping the work, ensuring timely delivery ahead of milestones</li>
+					</ul>
+					<ul class="award" style="margin-top: 0;">
 						<li>Ideated and developed open-source Python package for working with tree data structures, with over 100 GitHub stars to date</li>
 					</ul>
 				</div>
@@ -56,7 +64,9 @@
 						<li>Initiated and single-handedly improved data and feature engineering pipeline architecture to standardize processing, reduce resource wastage, and increase scalability, resulting in time savings of over 35 hours</li>
 						<li>Delivered data analysis and insights to various stakeholders in accordance to business requirements to track model performance, support experimentation, and drive decision making</li>
 						<li>Performed predictive analysis with rule-based model as a real-time use case using Adobe IBMB clickstream data</li>
+					<ul class="award" style="margin-top: 0;">
 						<li>Published in IJCNN 2020 Personalized Digital Customer Services for Consumer Banking Call Centre using Neural Networks</li>
+					</ul>
 					</ul>
 					<br><b>Time Series Forecast Reusable Asset (FORA)</b><br>
 					<ul>
@@ -64,6 +74,8 @@
 						<li>Implemented end-to-end forecasting and anomaly detection workflows with CBG, IBG teams across SG, HK teams to forecast trade volume, CASA balances and transactions, metrics related to cards onboarding and more</li>
 						<li>Held workshops, demonstrations, project presentations, and code walkthroughs to business and technical teams from SG, CN, TW, HK and ID</li>
 						<li>Independently created and launched an enterprise-wide web application encompassing time series forecasting methods using Dash and Plotly, and deployed it using Jenkins and OpenShift</li>
+					</ul>
+					<ul class="award" style="margin-top: 0;">
 						<li>Launched 2 forecasting e-learning courses for bank-wide staff, collaborating with Culture and Curriculum team, and have over 1500 user completions to date</li>
 						<li>Voted top Reusable Asset (RA) in RA Learning Festival 2020</li>
 					</ul>
@@ -71,11 +83,13 @@
 					<ul>
 						<li>Developed end-to-end anomaly detection and forecasting pipeline to predict metrics related to card onboarding journey</li>
 						<li>Deployed solution on QlikView dashboard within 5 months of project inception, making it the first AI-embedded Control Tower within the bank</li>
+					<ul class="award" style="margin-top: 0;">
 						<li>Published in ACM 2022 Improving Operational Efficiency through Predicting Credit Card Application Turnaround Time with Index-based Encoding</li>
+					</ul>
 					</ul>
 					<br><b>CBG Mortgage Project</b><br>
 					<ul>
-						<li>Developed end-to-end ML solution for mortgage pricing to predict customers’ reprice rate</li>
+						<li>Developed end-to-end ML solution for mortgage pricing to predict customers' reprice rate</li>
 						<li>Improved existing data pipeline architecture, resulting in 85% time savings</li>
 						<li>Managed project deliverables, deployment plans, and drove project to deployment in 6 months</li>
 					</ul>
@@ -99,10 +113,11 @@
 						<li>Have experience with Kedro-style pipelines</li>
 					</ul>
 					<br><b>Others</b><br>
-					<ul class="award">
+					<ul class="award" style="margin-top: 0;">
 						<li>Spot Award recipient for 2021 Feb, Jun, Oct, and 2022 Apr for exemplary work performance</li>
 						<li>Star Award recipient for first half of 2021 for exemplary work performance</li>
 						<li>Second most active Coursera user, based on course completion, in the company in 2018</li>
+						<li>Completed over 100 Coursera courses within the span of 3.5 years</li>
 						<li>Represented Musicians Interest Group in DBS Dinner and Dance 2019 and 2021, playing keyboard in a live band</li>
 					</ul>
 				</div>
@@ -157,8 +172,10 @@
 				<div class="paragraph small-paragraph">
 					<b>Write about all things programming!</b><br>
 					Click to visit my <a href="https://kayjanwong.medium.com/" target="_blank">Medium</a>, <a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">365 Data Science</a>, and <a href="https://builtin.com/authors/kay-jan-wong/" target="_blank">Built In</a> profile<br>
-					<ul>
+					<ul class="award" style="margin-top: 0;">
 						<li>Most read story has over 100K views</li>
+					</ul>
+					<ul>
 						<li>Published on Towards Data Science, Python in Plain English</li>
 					</ul>
 				</div>
