--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 				AMPL, ExtendSim, Tableau, QGIS, DecisionVis, Disco (Fluxicon), Knime
 				<br><br>
 				<f3>Project Management</f3><br>
-				Jira, Git, Bitbucket, Confluence
+				Jira, Git, Confluence
 				<br><br>
 				<f3>Web Development</f3><br>
-				Dash, Flask, HTML, CSS, JS
+				Dash, Flask, React, HTML, CSS, JS
 				<br><br>
 				<f3>Microsoft Office</f3><br>
 				Microsoft Excel (Palisade, @Risk), Power Point, Visio, Word
