--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Technical Desk-Align</b><br>
 					<ul>
-						<li>Designed and maintained in-house Python packages, automated jobs, and API endpoints, collaborating effectively with a global team of over 15 members</li>
+						<li>Designed and maintained in-house Python packages, automated jobs, and API endpoints, collaborating effectively with a global team of over 15 developers</li>
+						<li>Took on roles of sprint manager and support personnel to address queries and issues from Quant Researchers</li>
 					</ul>
 				</div>
 				<br><br>
