--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 			<f1><b>Work Experience</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Quantitative Developer</f3><br>
-				<f3>Squarepoint Capital, Commodities</f3><br>
+				<f3>Squarepoint Capital, Commodities and Other Mandates</f3><br>
 				<div class="justifybox"><b>May 2024 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
-					<br><b>Technical Desk-Align</b><br>
+					<br><b>Technical</b><br>
 					<ul>
-						<li>Designed and maintained in-house Python packages, automated jobs, and API endpoints, collaborating effectively with a global team of over 15 developers</li>
+						<li>Designed and maintained in-house Python packages to publish reports to docviewer and confluence pages, standardising the reports and easing the workload of Quant Researchers</li>
+						<li>Maintained and migrated code, CI/CD pipelines, Prefect jobs, and API endpoints, collaborating effectively with a global team of over 15 developers</li>
 						<li>Took on roles of sprint manager and support personnel to address queries and issues from Quant Researchers</li>
 					</ul>
 				</div>
