--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Technical</b><br>
 					<ul>
-						<li>Designed and maintained in-house Python packages to publish reports to docviewer and confluence pages, standardising the reports and easing the workload of Quant Researchers</li>
-						<li>Maintained and migrated code, CI/CD pipelines, Prefect jobs, and API endpoints, collaborating effectively with a global team of over 15 developers</li>
-						<li>Took on roles of sprint manager and support personnel to address queries and issues from Quant Researchers</li>
+						<li>Developed and maintained in-house Python packages to automate report publishing to DocViewer and Confluence, standardising the reports and easing the workload of Quant Researchers</li>
+						<li>Managed and migrated codebases, CI/CD pipelines, Prefect jobs, and API endpoints, collaborating with a global team of 15+ developers</li>
+						<li>Led sprint management and support efforts, addressing queries and resolving issues for Quant Researchers</li>
 					</ul>
 				</div>
 				<br><br>
