--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="paragraph small-paragraph">
 					<br><b>Technical</b><br>
 					<ul>
-						<li>Developed and maintained in-house Python packages to automate report publishing to DocViewer and Confluence, standardising the reports and easing the workload of Quant Researchers</li>
+						<li>Developed and maintained in-house Python packages to automate report publishing to DocViewer and Confluence, standardising the reports and reducing workload for Quant Researchers</li>
 						<li>Managed and migrated codebases, CI/CD pipelines, Prefect jobs, and API endpoints, collaborating with a global team of 15+ developers</li>
 						<li>Led sprint management and support efforts, addressing queries and resolving issues for Quant Researchers</li>
 					</ul>
