--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<f1><b>Work Experience</b></f1><br><br>
 			<div class="mainbody-indent">
 				<f3>Quantitative Developer</f3><br>
-				<f3>Squarepoint Capital, Commodities and Other Mandates</f3><br>
+				<f3>Squarepoint, Commodities and Other Mandates</f3><br>
 				<div class="justifybox"><b>May 2024 - Present<div class="nav">Singapore</b></div></div>
 				<div class="paragraph small-paragraph">
 					<br><b>Technical</b><br>
