--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 					<b>Write about all things programming!</b><br>
 					Click to visit my <a href="https://kayjanwong.medium.com/" target="_blank">Medium</a>, <a href="https://365datascience.com/blog/authors/kay-jan-wong/" target="_blank">365 Data Science</a>, and <a href="https://builtin.com/authors/kay-jan-wong/" target="_blank">Built In</a> profile<br>
 					<ul class="award" style="margin-top: 0;">
-						<li>Most read story has over 100K views</li>
+						<li>Authored original content on various programming topics including algorithms, coding best practices, data science, and software engineering</li>
+						<li>Key accomplishments include having multiple articles of over 100K views</li>
 					</ul>
 					<ul>
 						<li>Published on Towards Data Science, Python in Plain English</li>
