--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<ul>
 						<li>Developed and maintained in-house Python packages to automate report publishing to DocViewer and Confluence, standardising the reports and reducing workload for Quant Researchers</li>
 						<li>Managed and migrated codebases, CI/CD pipelines, Prefect jobs, and API endpoints, collaborating with a global team of 15+ developers</li>
+						<li>Reduced latency of minutely alpha publication from 26s to 6s</li>
 						<li>Led sprint management and support efforts, addressing queries and resolving issues for Quant Researchers</li>
 					</ul>
 				</div>
